modules/gdscript/tests/scripts/analyzer/errors/call_lambda_with_paranthesis.gd
var fn1 = func(call_me): call_me()
